--- a/index.css
+++ b/index.css
@@ -133,3 +133,40 @@ button{
     bottom: 5%;
     position: absolute;
 }
+.rules-popup{
+    display: none;
+    width:19rem;
+    height: 20rem;
+    border-radius: 10px;
+    border: 8px solid white;
+    background-color: #004429;
+    color: white;
+    padding: 1rem;
+    position:absolute;
+    right: 10%;
+    bottom: 13%;
+    h1{
+        text-align: center;
+    }
+    li{
+        margin-bottom: 10px;
+        list-style-type: square;
+    }
+    li::marker{
+    color: #FFD600;
+    }
+}
+.cancel-btn{
+    position: absolute;
+    top: -45px;
+    right: -25px;
+    border: 8px solid white;
+    font-weight: bold;
+    border-radius: 100%;
+    width: 40px;
+    height: 40px;
+    font-size: 30px;
+    background-color: #FF0000;
+    text-align: center;
+    cursor: pointer;
+}
